@@ -732,21 +732,25 @@ function getTriggersOverviewData(array $groupids, $application, $style, array $h
 }
 
 /**
- * Get triggers data with priority set to highest priority of not resolved problems generated by this trigger.
+ * Get triggers data with priority set to highest priority of problems generated by this trigger.
  *
  * @param array $trigger_options                     API options. Array 'output' should contain 'value', option
  *                                                   'preservekeys' should be set to true.
- * @param array $problem_options
- * @param int   $problem_options['show_suppressed']  Whether to show triggers with suppressed problems.
- * @param int   $problem_options['min_severity']     (optional) Minimal problem severity.
- * @param int   $problem_options['time_from']        (optional) The time starting from which the problems were created.
+ * @param array		$problem_options
+ * @param int		$problem_options['show_suppressed']  Whether to show triggers with suppressed problems.
+ * @param int		$problem_options['min_severity']     (optional) Minimal problem severity.
+ * @param int		$problem_options['time_from']        (optional) The time starting from which the problems were created.
+ * @param boolean	$problem_options['recent']			 (optional) show recent problems.
+ * @param boolean	$problem_options['any']				 (optional) show resolved and not resolved problems.
  *
  * @return array
  */
 function getTriggersWithActualSeverity(array $trigger_options, array $problem_options) {
 	$problem_options += [
 		'min_severity' => TRIGGER_SEVERITY_NOT_CLASSIFIED,
-		'time_from' => null
+		'time_from' => null,
+		'recent' => null,
+		'any' => null
 	];
 
 	$triggers = API::Trigger()->get($trigger_options);
@@ -754,10 +758,8 @@ function getTriggersWithActualSeverity(array $trigger_options, array $problem_op
 	$problem_triggerids = [];
 
 	foreach ($triggers as $triggerid => &$trigger) {
-		if ($trigger['value'] == TRIGGER_VALUE_TRUE) {
-			$problem_triggerids[] = $triggerid;
-			$trigger['priority'] = TRIGGER_SEVERITY_NOT_CLASSIFIED;
-		}
+		$problem_triggerids[] = $triggerid;
+		$trigger['priority'] = TRIGGER_SEVERITY_NOT_CLASSIFIED;
 	}
 	unset($trigger);
 
@@ -766,7 +768,9 @@ function getTriggersWithActualSeverity(array $trigger_options, array $problem_op
 			'output' => ['objectid', 'severity'],
 			'objectids' => $problem_triggerids,
 			'suppressed' => ($problem_options['show_suppressed'] == ZBX_PROBLEM_SUPPRESSED_FALSE) ? false : null,
-			'time_from' => $problem_options['time_from']
+			'time_from' => $problem_options['time_from'],
+			'recent' => $problem_options['recent'],
+			'any' => $problem_options['any']
 		]);
 
 		$triggerids = zbx_objectValues($problems, 'objectid');
